--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -12,6 +12,16 @@
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/11.png" alt="image">
 
     <img class = "x" src ="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/WhatsApp%20Image%202024-07-13%20at%208.33.40%20PM.jpeg" alt = "image">
+
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/487ac3ae61484e11b4807d08ff588425.jpg"alt="image2">
+
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/26e18e8e56a540779821f01c48226441.jpg"alt="image2">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/87d29bfee6aa4678a786aa6276e3fecd.jpg"alt="image2">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/837348faa04e4b6c84511c6d161f4eb6.jpg"alt="image2">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1733640375643.jpg"alt="image2">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/e2166d8fe4c54b4d8529e9c71f80ad50.jpg"alt="image2">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/e4052a9a4ec44fa4b1368ffef4897347.jpg"alt="image2">
+    
  
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Manicure%20%26%20Pedicure.png"alt="image2">
  
