--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="Background Image 5">
             </div>
             <div class="slide fade">
-                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kalane3.jpeg" alt="Background Image 6">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/e4052a9a4ec44fa4b1368ffef4897347.jpg" alt="Background Image 6">
             </div>
         </div>
 
