--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
                  <div class="slide fade">
-                <img src="https://github.com/inno6969/Salon-web/blob/main/6b0b60d361234bc88285ee23316b01d9.jpg?raw=true" alt="Background Image 1">
+                <img src="https://github.com/inno6969/Salon-web/blob/main/6b0b60d361234bc88285ee23316b01d9.jpg" alt="Background Image 1">
             </div>
                  
             </div>
