--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="slideshow-container">
              <div class="slide fade">
                 <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1733640375643.jpg" alt="Background Image 1">
+                 </div>
 
-
-                 <div class="slide fade">
-                <img src="https://github.com/inno6969/Salon-web/blob/main/6b0b60d361234bc88285ee23316b01d9.jpg" alt="Background Image 1">
+             <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/6b0b60d361234bc88285ee23316b01d9.jpg" alt="Background Image 6">
             </div>
                  
             </div>
