--- a/Dashboard.html
+++ b/Dashboard.html
@@ -19,7 +19,7 @@
                 <h2>Login</h2>
                 <form id="login-form">
                     <div class="input-group">
-                        <input type="text" id="email" placeholder="Username" required>
+                        <input type="text" id="email" placeholder="Email" required>
                     </div>
                     <div class="input-group">
                         <input type="password" id="password" placeholder="Password" required>
