--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blissful Beauty Salon</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -34,15 +34,15 @@
         <h2>Our Services</h2>
         <div class="service-container">
             <div class="service">
-                <h3>💇‍♀️ Hair Styling</h3>
+                <h3> Hair Styling</h3>
                 <p>Perfect cuts & treatments</p>
             </div>
             <div class="service">
-                <h3>💅 Manicures</h3>
+                <h3> Manicures</h3>
                 <p>Flawless nails every time</p>
             </div>
             <div class="service">
-                <h3>💆‍♀️ Spa Therapy</h3>
+                <h3> Spa Therapy</h3>
                 <p>Relax, refresh, rejuvenate</p>
             </div>
         </div>
@@ -50,16 +50,16 @@
 
     <section class="promo">
         <h2>Special Offer</h2>
-        <p>✨ Get <strong>40% OFF</strong> your first appointment! ✨</p>
+        <p> Get <strong>40% OFF</strong> your first appointment! </p>
     </section>
 
     <footer>
         <div class="footer-container">
             <div class="contact">
                 <h3>Contact Us</h3>
-                <p>📍 Location: Blissful Beauty Salon</p>
-                <p>📞 Phone: (078) 0233 123</p>
-                <p>📧 Email: <a href="mailto:thekomphow99@gmail.com">thekomphow99@gmail.com</a></p>
+                <p> Location: Blissful Beauty Salon</p>
+                <p> Phone: (078) 0233 123</p>
+                <p>Email: <a href="mailto:thekomphow99@gmail.com">thekomphow99@gmail.com</a></p>
             </div>
             <div class="social">
                 <h3>Follow Us</h3>
