--- a/index.html
+++ b/index.html
@@ -22,13 +22,22 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Blissful Beauty Salon</h1>
-            <p>Your Oasis of Beauty & Relaxation</p>
-            <a href="registration.html" class="btn">Create a Profile</a>
-        </div>
-    </section>
+   <section class="hero">
+    <div class="slideshow">
+        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1733640375643.jpg" alt="Salon Image 1">
+        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/6b0b60d361234bc88285ee23316b01d9.jpg" alt="Salon Image 2">
+        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2a475d9b99cb40409c58fb73864ed7c5.jpg" alt="Salon Image 3">
+        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/18ff207ccf5c40a983bc2d82e7b89b28.jpg" alt="Salon Image 4">
+        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/26e18e8e56a540779821f01c48226441.jpg" alt="Salon Image 5">
+        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/e2166d8fe4c54b4d8529e9c71f80ad50.jpg" alt="Salon Image 6">
+    </div>
+    <div class="hero-content">
+        <h1>Blissful Beauty Salon</h1>
+        <p>Your Oasis of Beauty & Relaxation</p>
+        <a href="registration.html" class="btn">Create a Profile</a>
+    </div>
+</section>
+
 
     <section class="services">
         <h2>Our Services</h2>
