--- a/index.html
+++ b/index.html
@@ -3,79 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blissful Beauty Salon</title>
-    <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>Welcome to Blissful Beauty Salon</title>
+    <link rel="stylesheet" href="Dashboard.css">
 </head>
 <body>
+
+    <!-- Header Section -->
     <header>
         <div class="logo">
             <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Beauty.png" alt="Blissful Salon Logo">
         </div>
         <nav>
             <ul>
-                <li><a href="Dashboard.html">Login</a></li>
-                <li><a href="giftcard.html">Gift Card</a></li>
-                <li><a href="specials.html">Promotions</a></li>
-                <li><a href="careers.html">Careers</a></li>
+                <li><button onclick="location.href='Dashboard.html'">Login</button></li>
+                <li><button onclick="location.href='giftcard.html'">Gift Card</button></li>
+                <li><button onclick="location.href='specials.html'">Promotions</button></li>
+                <li><button onclick="location.href='careers.html'">Careers</button></li>
             </ul>
         </nav>
     </header>
 
-   <section class="hero">
-    <div class="slideshow">
-        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1733640375643.jpg" alt="Salon Image 1">
-        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/6b0b60d361234bc88285ee23316b01d9.jpg" alt="Salon Image 2">
-        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2a475d9b99cb40409c58fb73864ed7c5.jpg" alt="Salon Image 3">
-        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/18ff207ccf5c40a983bc2d82e7b89b28.jpg" alt="Salon Image 4">
-        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/26e18e8e56a540779821f01c48226441.jpg" alt="Salon Image 5">
-        <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/e2166d8fe4c54b4d8529e9c71f80ad50.jpg" alt="Salon Image 6">
-    </div>
-    <div class="hero-content">
-        <h1>Blissful Beauty Salon</h1>
-        <p>Your Oasis of Beauty & Relaxation</p>
-        <a href="registration.html" class="btn">Create a Profile</a>
-    </div>
-</section>
-
-
-    <section class="services">
-        <h2>Our Services</h2>
-        <div class="service-container">
-            <div class="service">
-                <h3> Hair Styling</h3>
-                <p>Perfect cuts & treatments</p>
-            </div>
-            <div class="service">
-                <h3> Manicures</h3>
-                <p>Flawless nails every time</p>
-            </div>
-            <div class="service">
-                <h3> Spa Therapy</h3>
-                <p>Relax, refresh, rejuvenate</p>
-            </div>
+    <!-- Hero Section with Background Slideshow -->
+    <section class="hero">
+        <div class="slideshow">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1733640375643.jpg" alt="Salon Image 1">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/6b0b60d361234bc88285ee23316b01d9.jpg" alt="Salon Image 2">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2a475d9b99cb40409c58fb73864ed7c5.jpg" alt="Salon Image 3">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/18ff207ccf5c40a983bc2d82e7b89b28.jpg" alt="Salon Image 4">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/26e18e8e56a540779821f01c48226441.jpg" alt="Salon Image 5">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/e2166d8fe4c54b4d8529e9c71f80ad50.jpg" alt="Salon Image 6">
+        </div>
+        <div class="hero-content">
+            <h1>Blissful Beauty Salon</h1>
+            <p>Your Oasis of Beauty & Relaxation</p>
+            <a href="registration.html" class="btn">Create a Profile</a>
         </div>
     </section>
 
-    <section class="promo">
-        <h2>Special Offer</h2>
-        <p> Get <strong>40% OFF</strong> your first appointment! </p>
-    </section>
-
+    <!-- Footer Section -->
     <footer>
         <div class="footer-container">
-            <div class="contact">
-                <h3>Contact Us</h3>
-                <p> Location: Blissful Beauty Salon</p>
-                <p> Phone: (078) 0233 123</p>
-                <p>Email: <a href="mailto:thekomphow99@gmail.com">thekomphow99@gmail.com</a></p>
-            </div>
-            <div class="social">
-                <h3>Follow Us</h3>
-                <a href="https://www.facebook.com/profile.php?id=61554845873379">Facebook</a> |
-                <a href="https://za.linkedin.com/in/theko-robin-mpho-707b5245">LinkedIn</a>
-            </div>
+            <p>© 2024 Blissful Salon | Created by Theko Mpho</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
