--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+    let slides = document.querySelectorAll(".slideshow img");
+    let index = 0;
+
+    function showSlides() {
+        slides.forEach((slide, i) => {
+            slide.style.opacity = i === index ? "1" : "0";
+        });
+
+        index = (index + 1) % slides.length;
+    }
+
+    setInterval(showSlides, 5000); // Change slide every 5 seconds
+});
+
+</script>
 </body>
 </html>
