--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><button onclick="location.href='login.html'">Login</button></li>
                 <li><button onclick="location.href='servicesoffred.html'">Services</button></li
-                <li><button onclick="location.href='giftcard.html'">Gift Card</button></li>
+                <li><button onclick="location.href='giftcard.html'">Gift Card</button></li
                 <li><button onclick="location.href='specials.html'">Promotions</button></li>
                 <li><button onclick="location.href='careers.html'">Careers</button></li>
             </ul>
@@ -26,12 +26,49 @@
 
     <!-- Hero Section with Slideshow Background -->
     <section class="hero">
-        <div class="slideshow">
-            <img src="image1.jpg" class="slide" alt="Salon Interior">
-            <img src="image2.jpg" class="slide" alt="Hair Styling">
-            <img src="image3.jpg" class="slide" alt="Manicure">
-            <img src="image4.jpg" class="slide" alt="Massage Therapy">
+
+         <div class="slideshow-container">
+             <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1733640375643.jpg" alt="Background Image 1">
+                 </div>
+
+             <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/6b0b60d361234bc88285ee23316b01d9.jpg" alt="Background Image 6">
+            </div>
+                 
+            </div>
+             <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2a475d9b99cb40409c58fb73864ed7c5.jpg" alt="Background Image 1">
+            </div>
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/18ff207ccf5c40a983bc2d82e7b89b28.jpg" alt="Background Image 1">
+            </div>
+
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/26e18e8e56a540779821f01c48226441.jpg" alt="Background Image 1">
+            </div>
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/e2166d8fe4c54b4d8529e9c71f80ad50.jpg" alt="Background Image 1">
+            </div>
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kanale2.jpeg" alt="Background Image 2">
+            </div>
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar2.jpeg" alt="Background Image 3">
+            </div>
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar3.jpeg" alt="Background Image 4">
+            </div>
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="Background Image 5">
+            </div>
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/e4052a9a4ec44fa4b1368ffef4897347.jpg" alt="Background Image 6">
+            </div>
         </div>
+
+
+        
         <div class="hero-content">
             <h1>Blissful Beauty Salon</h1>
             <p>Your one-stop destination for relaxation and beauty.</p>
@@ -57,6 +94,24 @@
             </div>
         </div>
     </section>
+
+     <script>
+    document.addEventListener("DOMContentLoaded", function() {
+    let slides = document.querySelectorAll(".slideshow img");
+    let index = 0;
+
+    function showSlides() {
+        slides.forEach((slide, i) => {
+            slide.style.opacity = i === index ? "1" : "0";
+        });
+
+        index = (index + 1) % slides.length;
+    }
+
+    setInterval(showSlides, 5000); // Change slide every 5 seconds
+});
+
+</script>
 
     <!-- Footer -->
     <footer>
@@ -90,23 +145,5 @@
             </div>
         </div>
     </footer>
-
-      <script>
-    document.addEventListener("DOMContentLoaded", function() {
-    let slides = document.querySelectorAll(".slideshow img");
-    let index = 0;
-
-    function showSlides() {
-        slides.forEach((slide, i) => {
-            slide.style.opacity = i === index ? "1" : "0";
-        });
-
-        index = (index + 1) % slides.length;
-    }
-
-    setInterval(showSlides, 5000); // Change slide every 5 seconds
-});
-
-</script>
 </body>
 </html>
