--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav>
             <ul>
                 <li><a href="Dashboard.html" class="nav-btn">Login</a></li>
+                <li><a href="appointment.html" class="nav-btn">Booking</a></li>
                 <li><a href="servicesoffred.html" class="nav-btn">Services</a></li>
                 <li><a href="giftcard.html" class="nav-btn">Gift Card</a></li>
                 <li><a href="specials.html" class="nav-btn">Promotions</a></li>
@@ -72,6 +73,7 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="Dashboard.html">Login</a></li>
+                    <li><a href="appointment.html.html">Booking</a></li>
                     <li><a href="servicesoffred.html">Services</a></li>
                     <li><a href="giftcard.html">Gift Card</a></li>
                     <li><a href="specials.html">Promotions</a></li>
@@ -91,7 +93,7 @@
                 <p>Email: <a href="mailto:thekomphow99@gmail.com">thekomphow99@gmail.com</a></p>
             </div>
         </div>
-        <p class="footer-credit">Web Created by <b>Theko Mpho</b> | © 2024 Blissful Salon</p>
+        <p class="footer-credit">Web Created by <b>Theko Mpho</b> | © 2025 Blissful Salon</p>
     </footer>
 
     <script>
@@ -109,3 +111,4 @@
     </script>
 </body>
 </html>
+
