--- a/paymentM.html
+++ b/paymentM.html
@@ -25,12 +25,14 @@
             <button type="submit" class="submit-button">Pay Now</button>
         </form>
         
-        <button class="back-button" onclick="window.location.href='appointments.html'">Back</button>
+        <button class="back-button" onclick="window.location.href='index.html'">Dashboard</button>
         <div class="message" id="success-message" style="display:none;">
-           Payment successful! Your appointment has been confirmed. A payment slip will be printed shortly. A confirmation email with your appointment details will also be sent to you.
+           Payment successful!!!
+            Your appointment has been confirmed. A payment slip will be printed shortly as confirmation.
         </div>
     </div>
 
     <script src="paymentt.js"></script>
 </body>
 </html>
+
