--- a/receipt.html
+++ b/receipt.html
@@ -25,9 +25,10 @@
         </div>
         <button class="print-button" onclick="window.print()">Print Receipt</button>
         <br>
-        <button class="back-button" onclick="window.location.href='services.html'">Home</button>
+        <button class="back-button" onclick="window.location.href='index.html'">Dashboard</button>
     </div>
     <script src="receipt.js"></script>
 </body>
 
 </html>
+
