--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <div class="footer-section contact-info">
                 <h3>Contact</h3>
                 <p>Phone: (078) 0233 123</p>
+                <p>WhatsApp: (078) 0233 123</p>
                 <p>Email: <a href="mailto:thekomphow99@gmail.com">thekomphow99@gmail.com</a></p>
             </div>
         </div>
@@ -111,4 +112,5 @@
     </script>
 </body>
 </html>
+
 
