--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="hero">
             <h1>Blissful Salon</h1>
             <p>Your one-stop destination for relaxation and beauty.</p>
-            <a href="registration.html" class="cta-button">Create a Profile</a>
+            <a href="registration.html" class="cta-button">Create A Profile</a>
         </section>
 
         <section class="services">
@@ -112,5 +112,6 @@
     </script>
 </body>
 </html>
+
 
 
