--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="Dashboard.html">Login</a></li>
-                    <li><a href="appointment.html.html">Booking</a></li>
+                    <li><a href="appointment.html">Booking</a></li>
                     <li><a href="servicesoffred.html">Services</a></li>
                     <li><a href="giftcard.html">Gift Card</a></li>
                     <li><a href="specials.html">Promotions</a></li>
@@ -112,6 +112,7 @@
     </script>
 </body>
 </html>
+
 
 
 
