--- a/reviews.html
+++ b/reviews.html
@@ -30,7 +30,7 @@
             <br>
             <button type="submit" class="submit-button">Submit Review</button>
         </form>
-        <button class="services-button" onclick="window.location.href='services.html'">Back</button> 
+        <button class="services-button" onclick="window.location.href='index.html'">Back</button> 
         <div id="message-sent" class="message-sent">
             Review submitted successfully!
         </div>
@@ -38,6 +38,7 @@
     </div>
     <script src="reviewss.js"></script>
 </body>
+
 
 
 </html>
