--- a/Dashboard.html
+++ b/Dashboard.html
@@ -32,8 +32,11 @@
             <div class="login-right">
                 <h2>WELCOME BACK!</h2>
                 <p>Already a Member? Please Login.</p>
+            </br>
+                <p class="links"><a href="index.html">Dashboard?</a></p>
             </div>
         </div>
     </div>
 </body>
 </html>
+
